fix(core/checkbox): change main chip selected gap tight -> slim[CU-86ewwf4tu]

--- a/packages/core/src/checkbox/_checkbox-styles.scss
+++ b/packages/core/src/checkbox/_checkbox-styles.scss
@@ -259,6 +259,12 @@ $checked-disabled: (
     align-items: center;
   }
 
+  &--main {
+    .#{$prefix}__label-container {
+      gap: spacing.semantic-variable(gap, slim);
+    }
+  }
+
   &__label-container {
     display: flex;
     align-items: flex-start;
